# humidity-recorder

./: .gitignore  Dockerfile  ai.py  db.py  excel.py  main.py  nixpacks.toml  pyproject.toml  requirements.txt  start_server.bat  workers_db.py
static/: index.html  workers.html
